# tauri-wgpu-test

./: Cargo.toml
frontend/: package-lock.json
frontend/src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  renderer.rs  shader.wgsl
tauri-plugin-transparent-wry/: Cargo.toml
tauri-plugin-transparent-wry/src/: lib.rs
